Fixed horizontal scroll

--- a/public/stylesheets/public/defaultStyles.css
+++ b/public/stylesheets/public/defaultStyles.css
@@ -6588,7 +6588,8 @@ html body .rootView {
   margin-bottom: 30px;
 }
 .footer hr {
-  width: 400px;
+  width: 90%;
+  max-width: 400px;
   margin: 15px auto;
   height: 1px;
   background: black;
